# moms_apriltag

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: python.yaml
apriltag_gen/: __init__.py  apr.py  calibrate.py  display.py  target.py
apriltag_gen/tags/: tag16h5.py  tag25h9.py  tag36h11.py
dev/board/: test.py
dev/live/: camera_calibrate.py  threaded_camera.py  video_capture.py
dev/old_opencv_camera_merge/: test.ipynb  test.py
dev/opencv_camera/calibration-apriltag-stereo/: board.ipynb  calibration.ipynb  stereo.py
dev/opencv_camera/calibration-apriltag-stereo/ocvc/apriltag/: apriltag_marker.py  apriltags.py  calibrate.py
dev/opencv_camera/detection-apriltag/: detect-apriltag.ipynb
dev/opencv_camera/ocvc/apriltag/: apriltag_detections.py  apriltag_marker.py  apriltags.py  calibrate.py
dev/opencv_camera_merge/: ocvc.py
docs/jupyter/: apriltag-dev.ipynb  tagCircle21h7.py  tagCircle49h12.py  tagCustom48h12.py  tagStandard41h12.py  tagStandard52h13.py
docs/jupyter/board-gen/: board-gen.ipynb
docs/jupyter/board-generation/: board.ipynb
docs/jupyter/calibration-apriltag-stereo/: calibration.ipynb  stereo_calibration.yml
docs/jupyter/calibration-targets-sizing/: calibration-sizing-apriltag.ipynb
docs/jupyter/tag-detection-aruco/: tag-detect.ipynb
docs/jupyter/tag-detection-pupil-labs/: tag-detect.ipynb
docs/jupyter/tag-generation/: apriltag-gen.ipynb
example/: examples.ipynb  gen.py
moms_apriltag/: __init__.py  apriltag_drawer.py  color_space.py  generator2.py  generator3.py  target.py
moms_apriltag/aruco_tags/: calibrate.py
moms_apriltag/tags/: tag36h10.py  tag41h12.py  tagCircle21h7.py  tagCircle49h12.py  tagCustom48h12.py  tagStandard41h12.py  tagStandard52h13.py
tests/: test_gen.py
