[tool.poetry]
name = "moms_apriltag"
version = "0.2.3"
description = "Generate apriltags"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/apriltag_gen/"
repository = 'https://github.com/MomsFriendlyRobotCompany/apriltag_gen'
# documentation = "http://..."
keywords = ["apriltag", "camera", "calibration"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing"
]

# [tool.poetry.scripts]
# apriltag_generator = 'moms_apriltag.bin.gen:main'

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
# pupil-apriltags = "*" # actually don't need this

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
